--- a/index.html
+++ b/index.html
@@ -636,6 +636,36 @@
     </div>
   </div>
 </div>
+<div id="thanks" class="answersContainer full lightBG" style="display: none;">
+  <div class="grid-y" style="height: 100vh;">
+    <div class="cell small-2 medium-3">
+      <div class="grid-x align-bottom">
+        <div class="cell small-4 padding30">
+          <img src="assets/logoICM.png" alt="Logo ICM" class="transparent w150 margin20" style="position: absolute; top: 0; left: 0;">
+        </div>
+        <div class="cell small-4 medium-offset-4">
+          <a href="" target="_blank">
+            <img  class="float-right padding30" src="assets/btnDon.png" alt="Je donne <3" style="position: absolute; top: 0; right: 0;">
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="cell auto">
+      <div class="grid-x align-center hPaddding50">
+        <div class="cell small-12  medium-10 large-9">
+          <p class="bBold fs42 blueColor lh140 bBold text-center">
+            Votre perception des maladies du cerveau
+            et de la recherche nous est précieuse.
+            <br><br>
+            <span class="orangeColor">
+            Merci d’avoir répondu à notre enquête.
+              </span>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <script src="js/vendor/jquery.js"></script>
 <script src="js/vendor/what-input.js"></script>
 <script src="js/vendor/foundation.js"></script>
