--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
             </p>
           </div>
         </div>
-        <div class="orangeButton cliquable margin30" onclick="changeQuestion(false);resetYesNoBtn()">
+        <div class="orangeButton cliquable margin30" onclick="fillUserData();changeQuestion(false);;resetYesNoBtn();">
           <p class="text-center noHMargin fs22">
             VALIDER
           </p>
@@ -676,7 +676,7 @@
   <div id="why" class="answersContainer full lightBG" style="">
     <div class="grid-y align-center" style="height: 100vh;" id="whyPart">
       <div class="cell small-8">
-        <div class="grid-x hPaddding50 align-center">
+        <div class="grid-x align-center">
           <div class="cell small-12  medium-10 large-8">
             <p class="fs38 blueColor lh140 text-center show-for-large" id="whyText">
               Parce que l’ICM, situé au cœur de l’Hôpital de la Pitié-Salpêtrière, est un centre de recherche de renommée internationale où tous les moyens
@@ -734,7 +734,8 @@
             <br><br>
             <span class="orangeColor">
             Merci d’avoir répondu à notre enquête.
-              </span>
+
+            </span>
           </p>
         </div>
       </div>
@@ -767,14 +768,16 @@
 <script src="js/vendor/jquery.js"></script>
 <script src="js/vendor/what-input.js"></script>
 <script src="js/vendor/foundation.js"></script>
+<script src="js/utils.js"></script>
 <script src="js/app.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.2/js/intlTelInput.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.2/js/utils.js"></script>
 <script>
-  var input = document.querySelector("#phone");
-  window.intlTelInput(input, {
-        //separateDialCode: true
-      }
-  );
+    var input_phone = document.querySelector("#phone");
+    var iti = intlTelInput(input_phone, {
+            preferredCountries: ['FR', 'BE'],
+        }
+    );
 </script>
 </body>
 </html>
