--- a/index.html
+++ b/index.html
@@ -561,15 +561,18 @@
       </div>
     </div>
   </div>
+</div>
   <script src="js/vendor/jquery.js"></script>
   <script src="js/vendor/what-input.js"></script>
   <script src="js/vendor/foundation.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/utils.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.2/js/intlTelInput.js"></script>
   <script>
     var input = document.querySelector("#phone");
     window.intlTelInput(input, {
-          //separateDialCode: true
+      preferredCountries: ['FR', 'BE'],
+      //separateDialCode: true
         }
     );
 
