[*] fixe de la taille de police en version mobile

--- a/index.html
+++ b/index.html
@@ -532,12 +532,12 @@
     <div class="cell small-4 padding30">
       <img src="assets/logoICM.png" alt="Logo ICM" class="transparent w150">
     </div>
-    <div class="cell small-4">
+    <div class="cell small-4" id="questionNbContainer">
       <p class="fs30 textColor text-center"><span class="fs48 orangeColor" id="questionNb"><!--1--></span> / 3</p>
     </div>
     <div class="cell small-4">
       <a href="" target="_blank">
-        <img  class="float-right padding30" src="assets/btnDon.png" alt="Je donne <3" style="position: absolute; top: 0; right: 0;">
+        <img  class="float-right padding30" src="assets/btnDon.png" alt="Je donne <3" style="position: absolute; top: 0; right: 0;" id="btnDonQuestion">
       </a>
     </div>
   </div>
@@ -606,7 +606,7 @@
     <div class="cell small-2 medium-3" id="check">
       <div class="grid-x align-bottom">
         <div class="cell small-4 padding30">
-          <img src="assets/logoICM.png" alt="Logo ICM" class="transparent w150 margin20" style="position: absolute; top: 0; left: 0;">
+          <img src="assets/logoICM.png" alt="Logo ICM" class="transparent w150 margin20" style="position: absolute; top: 0; left: 0; z-index: 9999">
         </div>
         <div class="cell small-4 medium-offset-4">
           <a href="" target="_blank">
@@ -684,7 +684,7 @@
               en s’appuyant sur des plateformes technologiques de pointe. <span class="orangeColor"> <br>Leur unique objectif&nbsp;: parvenir à de nouvelles découvertes et les transformer au plus
               vite en traitements efficaces pour chaque patient&nbsp;!</span>
             </p>
-            <p class="fs28 blueColor lh140 text-center hide-for-large" id="whyText" style="margin-top: 50px">
+            <p class="fs28 blueColor lh140 text-center hide-for-large" id="whyText" style="margin-top: 100px">
               Parce que l’ICM, situé au cœur de l’Hôpital de la Pitié-Salpêtrière, est un centre de recherche de renommée internationale où tous les moyens
               techniques et humains sont réunis pour percer les mystères du cerveau. Chaque jour, 700 experts en neurosciences y travaillent main dans la main
               en s’appuyant sur des plateformes technologiques de pointe. <span class="orangeColor"><br> Leur unique objectif&nbsp;: parvenir à de nouvelles découvertes et les transformer au plus
