[+] ajout des liens pour les boutons don et les logos

--- a/index.html
+++ b/index.html
@@ -612,10 +612,12 @@
     <div class="cell small-2 medium-3" id="check">
       <div class="grid-x align-bottom">
         <div class="cell small-4 padding30">
+          <a href="https://icm-institute.org/fr/?utm_campaign=ENQUETE&utm_source=LP&utm_content=SITE" target="_blank">
           <img src="assets/logoICM.png" alt="Logo ICM" class="transparent w150 margin20" style="position: absolute; top: 0; left: 0; z-index: 9999">
+          </a>
         </div>
         <div class="cell small-4 medium-offset-4">
-          <a href="" target="_blank">
+          <a href="https://don.icm-institute.org/b?cid=191&utm_campaign=ENQUETE&utm_source=LP&utm_content=DON" target="_blank">
             <img  class="float-right padding30" src="assets/btnDon.png" alt="Je donne <3" style="position: absolute; top: 0; right: 0;">
           </a>
         </div>
@@ -728,10 +730,12 @@
     <div class="cell small-2 medium-3">
       <div class="grid-x align-bottom">
         <div class="cell small-4 padding30">
+          <a href="https://icm-institute.org/fr/?utm_campaign=ENQUETE&utm_source=LP&utm_content=SITE" target="_blank">
           <img src="assets/logoICM.png" alt="Logo ICM" class="transparent w150 margin20" style="position: absolute; top: 0; left: 0;">
+          </a>
         </div>
         <div class="cell small-4 medium-offset-4">
-          <a href="" target="_blank">
+          <a href="https://don.icm-institute.org/b?cid=191&utm_campaign=ENQUETE&utm_source=LP&utm_content=DON" target="_blank">
             <img  class="float-right padding30" src="assets/btnDon.png" alt="Je donne <3" style="position: absolute; top: 0; right: 0;">
           </a>
         </div>
