--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <div class="grid-x">
                 <div class="medium-12 cell">
                   <label>
-                    <select id="civilite">
+                    <select id="civilite" class="hMargin5">
                       <option value="" selected disabled>Civilité</option>
                       <option value="Monsieur">Monsieur</option>
                       <option value="Madame">Madame</option>
@@ -66,22 +66,22 @@
                 </div>
                 <div class="medium-12 cell">
                   <label>
-                    <input type="text" placeholder="Nom" id="nom" onchange="document.getElementById('formErrorMsg').innerText = ''">
+                    <input type="text" placeholder="Nom" id="nom" onchange="document.getElementById('formErrorMsg').innerText = ''" class="hMargin5">
                   </label>
                 </div>
                 <div class="medium-12 cell">
                   <label>
-                    <input type="text" placeholder="Prénom" id="prenom" onchange="document.getElementById('formErrorMsg').innerText = ''">
+                    <input type="text" placeholder="Prénom" id="prenom" onchange="document.getElementById('formErrorMsg').innerText = ''" class="hMargin5">
                   </label>
                 </div>
                 <div class="medium-12 cell" >
                   <label>
-                    <input type="email" placeholder="E-mail" id="email" onchange="document.getElementById('formErrorMsg').innerText = ''">
+                    <input type="email" placeholder="E-mail" id="email" onchange="document.getElementById('formErrorMsg').innerText = ''" class="hMargin5">
                   </label>
                 </div>
                 <div class="medium-12 cell">
                   <label>
-                    <input type="tel" id="phone" placeholder="Téléphone (optionel)">
+                    <input type="tel" id="phone" placeholder="Téléphone (optionel)" class="hMargin5">
                   </label>
                 </div>
               </div>
