[*] taille du form

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <div class="cell small-12 medium-5">
       <div class="grid-x" id="formHeaderContainer">
-        <div class="cell small-12 large-8 large-offset-2 padding30">
+        <div class="cell small-12 large-9 medium-10 large-offset-2 padding30">
           <p class="greyColor fs18 noHMargin smallText">
             Merci de prendre <span class="orangeColor bold">2 minutes </span><br>
             pour répondre à <span class="orangeColor bold">3 questions&nbsp;</span>!
