--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-<div style="display: block;" id="header" class="full">
+<div style="display: block; width: 100%; height: 100vh;" id="header">
   <div class="grid-x">
     <div class="cell small-12 medium-7">
       <div class="grid-x">
@@ -46,7 +46,7 @@
     </div>
     <div class="cell small-12 medium-5">
       <div class="grid-x" id="formHeaderContainer">
-        <div class="cell small-12 large-9 medium-10 large-offset-2 padding30">
+        <div class="cell small-12 large-9 medium-10 large-offset-2 padding30" style="padding-bottom: 0 !important;">
           <p class="greyColor fs18 noHMargin smallText">
             Merci de prendre <span class="orangeColor bold">2 minutes </span><br>
             pour répondre à <span class="orangeColor bold">3 questions&nbsp;</span>!
@@ -81,7 +81,8 @@
                 </div>
                 <div class="medium-12 cell">
                   <label>
-                    <input type="tel" id="phone" placeholder="Téléphone (optionel)" class="hMargin5">
+                    <input type="tel" id="phone" placeholder="1 23 45 67 89" class="hMargin5">
+                    <p id="optionel" class="blueColor fs12" style="display: none; position: absolute; top: 0; right: 0;">Optionel</p>
                   </label>
                 </div>
               </div>
@@ -97,7 +98,7 @@
               </p>
             </div>
           </div>
-          <div class="orangeButton cliquable" id="formHeaderButton" onclick="openForm();">
+          <div class="orangeButton cliquable" id="formHeaderButton" onclick="openForm();setOpt();">
             <p class="text-center">
               JE RÉPONDS
             </p>
@@ -506,13 +507,13 @@
         </div>
       </div>
     </div>
-    <div class="socialContainer">
+    <div class="socialContainer show-for-medium">
       <div class="grid-x align-right">
         <a href="https://www.facebook.com/icminstitute/" target="_blank">
         <div class="cell social cliquable" onmouseover="
         Array.prototype.forEach.call(document.getElementsByClassName('fbTxt'), function(e) {e.style.visibility = 'visible'})" onmouseleave="Array.prototype.forEach.call(document.getElementsByClassName('fbTxt'), function(e) {e.style.visibility = 'hidden'})" >
-          <p class="socialText greyColor fs18 fbTxt" style="visibility: hidden;">Facebook</p>
-          <p class="noHMargin text-center">
+          <p class="socialText greyColor fs18 fbTxt" style="visibility: hidden; z-index: 1">Facebook</p>
+          <p class="noHMargin text-center" style="z-index: 999">
             <i class="float-center fab fa-facebook-f noHMargin"></i>
           </p>
         </div>
@@ -521,8 +522,8 @@
       <div class="grid-x align-right">
         <a href="https://twitter.com/icm_institute" target="_blank">
         <div class="cell social cliquable" onmouseover="Array.prototype.forEach.call(document.getElementsByClassName('ttTxt'), function(e) {e.style.visibility = 'visible'})" onmouseleave="Array.prototype.forEach.call(document.getElementsByClassName('ttTxt'), function(e) {e.style.visibility = 'hidden'})">
-          <p  class="socialText greyColor fs18 ttTxt" style="visibility: hidden;">Twitter</p>
-          <p class="noHMargin text-center">
+          <p  class="socialText greyColor fs18 ttTxt" style="visibility: hidden; z-index: 1; ">Twitter</p>
+          <p class="noHMargin text-center" style="z-index: 999">
             <i class="float-center fab fa-twitter noHMargin"></i>
           </p>
         </div>
@@ -571,7 +572,9 @@
             </p>
           </div>
         </div>
-        <div class="orangeButton cliquable margin30" onclick="fillUserData();changeQuestion(false);;resetYesNoBtn();">
+        <div class="orangeButton cliquable margin30" onclick="fillUserData();changeQuestion(false);resetYesNoBtn();
+  document.body.scrollTop = 0; // For Safari
+  document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera">
           <p class="text-center noHMargin fs22">
             VALIDER
           </p>
@@ -583,7 +586,7 @@
       </div>
     </div>
   </div>
-  <div class="socialContainer">
+  <div class="socialContainer show-for-medium">
     <div class="grid-x align-right">
       <a href="https://www.facebook.com/icminstitute/" target="_blank">
         <div class="cell social cliquable" onmouseover="
@@ -618,7 +621,7 @@
         </div>
         <div class="cell small-4 medium-offset-4">
           <a href="https://don.icm-institute.org/b?cid=191&utm_campaign=ENQUETE&utm_source=LP&utm_content=DON" target="_blank">
-            <img  class="float-right padding30" src="assets/btnDon.png" alt="Je donne <3" style="position: absolute; top: 0; right: 0;">
+            <img  class="float-right padding30" src="assets/btnDon.png" alt="Je donne <3" style="position: absolute; top: 0; right: 0; z-index: 9999;">
           </a>
         </div>
       </div>
@@ -640,10 +643,10 @@
           <div class="grid-x align-center">
             <div class="cell">
               <div class="cliquable" onclick="scrollWhy()" id="answerArrow">
-                <p class="show-for-small-only text-center noHMargin fs20 orangeColor bBold">
+                <p class="show-for-small-only text-center noHMargin fs20 orangeColor bBold pourquoi">
                   Pourquoi&nbsp;?
                 </p>
-                <p class="show-for-medium text-center noHMargin fs48 orangeColor bBold">
+                <p class="show-for-medium text-center noHMargin fs48 orangeColor bBold pourquoi">
                   Pourquoi&nbsp;?
                 </p>
                 <p class="show-for-small-only text-center textColor fs14 noHMargin">
@@ -663,7 +666,7 @@
         </div>
       </div>
     </div>
-    <div class="socialContainer">
+    <div class="socialContainer show-for-medium">
       <div class="grid-x align-right">
         <a href="https://www.facebook.com/icminstitute/" target="_blank">
           <div class="cell social cliquable" onmouseover="
@@ -712,7 +715,7 @@
           <div class="cell small-10 large-4 medium-8">
             <div class="grid-x align-center">
               <div class="cell">
-                  <div class="orangeButton cliquable noHMargin" id="nextQuestion" onclick="changeQuestion(true);">
+                  <div class="orangeButton cliquable noHMargin" id="nextQuestion" onclick="changeQuestion(true);showOverflow()">
                     <p class="text-center">
                       QUESTION SUIVANTE
                     </p>
@@ -726,7 +729,7 @@
   </div>
 </div>
 <div id="thanks" class="answersContainer full lightBG" style="display: none;">
-  <div class="grid-y" style="height: 100vh;">
+  <div class="grid-y" style="height: 100%;">
     <div class="cell small-2 medium-3">
       <div class="grid-x align-bottom">
         <div class="cell small-4 padding30">
@@ -742,7 +745,7 @@
       </div>
     </div>
     <div class="cell auto">
-      <div class="grid-x align-center hPaddding50">
+      <div class="grid-x align-center" style="padding: 40px 5px !important;">
         <div class="cell small-12  medium-10 large-9">
           <p class="bBold fs42 blueColor lh140 bBold text-center title">
             Votre perception des maladies du cerveau
@@ -757,7 +760,7 @@
       </div>
     </div>
   </div>
-  <div class="socialContainer">
+  <div class="socialContainer show-for-medium show-for-medium">
     <div class="grid-x align-right">
       <a href="https://www.facebook.com/icminstitute/" target="_blank">
         <div class="cell social cliquable" onmouseover="
@@ -789,11 +792,33 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.2/js/intlTelInput.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.2/js/utils.js"></script>
 <script>
+      function setOpt() {
+    var opt = document.getElementById("optionel");
+    var phone = document.getElementById("phone");
+    var rect = phone.getBoundingClientRect();
+    opt.style.display = "block";
+    opt.style.top = rect.top + 3 + 'px';
+    opt.style.left = rect.right - opt.offsetWidth - 3 + "px";
+
+  }
     var input_phone = document.querySelector("#phone");
     var iti = intlTelInput(input_phone, {
             preferredCountries: ['FR', 'BE'],
+        });
+    var screen = "header";
+      console.log(screen);
+    var i = 0;
+      console.log(screen);
+      $(document).bind('mousewheel', function(e) {
+        i++;
+        if (i === 1) {
+          if (screen === "why")
+            return;
+          console.log(screen);
+          document.getElementById(screen).style.height = "100%";
+          i = 0;
         }
-    );
+      });
 </script>
 </body>
 </html>
