--- a/index.html
+++ b/index.html
@@ -507,7 +507,8 @@
                 </h4>
                 <p class="noHMargin textColor fs12">
                   La mise en place d'un lien hypertexte vers notre site nécessite une autorisation préalable écrite. Faites votre demande à&nbsp;: contact@icm-institute.org.
-                  L’ICM ne peut en aucun cas être tenu pour responsable de la mise à disposition des sites qui font l'objet d'un lien hypertexte à partir du site xxxx et
+                  L’ICM ne peut en aucun cas être tenu pour responsable de la mise à disposition des sites qui font l'objet d'un lien hypertexte à partir du site
+                  <a href=" http://grande-enquete.icm-institute.org/fr" target="_blank">http://grande-enquete.icm-institute.org/fr</a> et
                   ne peut supporter aucune responsabilité sur le contenu disponible sur ces sites ou à partir de ces sites.
                   <br>
                 </p>
@@ -523,7 +524,8 @@
                   Directeur de la publication <br>
                 </h4>
                 <p class="noHMargin textColor fs12">
-                  xxxx <br>
+                  Jean-Louis Da Costa Responsable de la communication et du développement
+                  <br>
                 </p>
                 <h4 class="noHMargin fs24 greyColor">
                   Hébergement du site <br>
