--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-<div style="display: block; width: 100%; height: 100vh;" id="header">
+<div style="display: block; width: 100%; height: 100%; min-height: 100vh" id="header">
   <div class="grid-x">
     <div class="cell small-12 medium-7">
       <div class="grid-x">
@@ -532,7 +532,7 @@
     </div>
   </div>
 </div>
-<div id="question1" class="questionsContainer full" style="display: none;">
+<div id="question1" class="questionsContainer full" style="display: none;height: 100%; min-height: 100vh">
   <div class="grid-x align-bottom">
     <div class="cell small-4 padding30">
       <a target="_blank"  href="https://icm-institute.org/fr/?utm_campaign=ENQUETE&utm_source=LP&utm_content=SITE">
@@ -610,7 +610,7 @@
     </div>
   </div>
 </div>
-<div id="answer" class="answersContainer full lightBG" style="display: none;">
+<div id="answer" class="answersContainer full lightBG" style="display: none;height: 100%; min-height: 100vh">
   <div class="grid-y" style="height: 100vh;">
     <div class="cell small-2 medium-3" id="check">
       <div class="grid-x align-bottom">
@@ -728,7 +728,7 @@
     </div>
   </div>
 </div>
-<div id="thanks" class="answersContainer full lightBG" style="display: none;">
+<div id="thanks" class="answersContainer full lightBG" style="display: none;height: 100%; min-height: 100vh">
   <div class="grid-y" style="height: 100%;">
     <div class="cell small-2 medium-3">
       <div class="grid-x align-bottom">
@@ -812,7 +812,10 @@
         if (i === 1) {
           if (screen === "why")
             return;
-          document.getElementById(screen).style.height = "100%";
+        //  console.log(parseInt(window.getComputedStyle(document.getElementById(screen), null).getPropertyValue("height")));
+          //console.log(window.innerHeight);
+            //console.log("je passe");
+            //document.getElementById(screen).style.height = "100%";
           i = 0;
         }
       });
