--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div class="cell small-12 medium-5">
-      <div class="grid-x" id="formHeaderContainer">
+      <div class="grid-x" id="formHeaderContainer" style="">
         <div class="cell small-12 large-9 medium-10 large-offset-2 padding30" style="padding-bottom: 0 !important;">
           <p class="greyColor fs18 noHMargin smallText">
             Merci de prendre <span class="orangeColor bold">2 minutes </span><br>
@@ -82,7 +82,7 @@
                 <div class="medium-12 cell">
                   <label>
                     <input type="tel" id="phone" placeholder="1 23 45 67 89" class="hMargin5">
-                    <p id="optionel" class="blueColor fs12" style="display: none; position: absolute; top: 0; right: 0;">Optionnel</p>
+                    <p id="optionnel" class="blueColor fs12" style="display: none; position: absolute; top: 0; right: 0;">Optionnel</p>
                   </label>
                 </div>
               </div>
@@ -612,7 +612,7 @@
 </div>
 <div id="answer" class="answersContainer full lightBG" style="display: none;height: 100%; min-height: 100vh">
   <div class="grid-y" style="height: 100vh;">
-    <div class="cell small-2 medium-3" id="check">
+    <div class="cell small-2 medium-3 large-3" id="check">
       <div class="grid-x align-bottom">
         <div class="cell small-4 padding30">
           <a href="https://icm-institute.org/fr/?utm_campaign=ENQUETE&utm_source=LP&utm_content=SITE" target="_blank">
@@ -627,7 +627,7 @@
       </div>
     </div>
     <div class="cell auto">
-      <div class="grid-x align-center">
+      <div class="grid-x align-center-middle" style="height: 100%;">
         <div class="cell small-12  medium-10 large-9">
           <p class="fs42 blueColor lh140 bBold text-center bigTitle" id="answerText">
             Comme vous, de nombreuses personnes <br class="show-for-large">
@@ -698,13 +698,13 @@
             <p class="fs32 blueColor lh140 text-center show-for-large semiTitle" id="whyText">
               Parce que l’ICM, situé au cœur de l’Hôpital de la Pitié-Salpêtrière, est un centre de recherche de renommée internationale où tous les moyens
               techniques et humains sont réunis pour percer les mystères du cerveau. Chaque jour, 700 experts en neurosciences y travaillent main dans la main
-              en s’appuyant sur des plateformes technologiques de pointe. <span class="orangeColor bold"> <br><br>Leur unique objectif&nbsp;: parvenir à de nouvelles découvertes et les transformer au plus
+              en s’appuyant sur des plateformes technologiques de pointe. <span class="orangeColor"> <br><br>Leur unique objectif&nbsp;: parvenir à de nouvelles découvertes et les transformer au plus
               vite en traitements efficaces pour chaque patient&nbsp;!</span>
             </p>
             <p class="blueColor lh140 text-center hide-for-large semiTitle fs28" id="whyText" style="margin-top: 30px">
               Parce que l’ICM, situé au cœur de l’Hôpital de la Pitié-Salpêtrière, est un centre de recherche de renommée internationale où tous les moyens
               techniques et humains sont réunis pour percer les mystères du cerveau. Chaque jour, 700 experts en neurosciences y travaillent main dans la main
-              en s’appuyant sur des plateformes technologiques de pointe. <span class="orangeColor bold"><br><br> Leur unique objectif&nbsp;: parvenir à de nouvelles découvertes et les transformer au plus
+              en s’appuyant sur des plateformes technologiques de pointe. <span class="orangeColor"><br><br> Leur unique objectif&nbsp;: parvenir à de nouvelles découvertes et les transformer au plus
               vite en traitements efficaces pour chaque patient&nbsp;!</span>
             </p>
           </div>
@@ -745,7 +745,7 @@
       </div>
     </div>
     <div class="cell auto">
-      <div class="grid-x align-center" style="padding: 40px 5px !important;">
+      <div class="grid-x align-center-middle" style="height: 100%">
         <div class="cell small-12  medium-10 large-9">
           <p class="bBold fs42 blueColor lh140 bBold text-center title">
             Votre perception des maladies du cerveau
@@ -792,13 +792,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.2/js/intlTelInput.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.2/js/utils.js"></script>
 <script>
+  //window.addEventListener("resize", setOpt);
       function setOpt() {
-    var opt = document.getElementById("optionel");
-    var phone = document.getElementById("phone");
-    var rect = phone.getBoundingClientRect();
-    opt.style.display = "block";
-    opt.style.top = rect.top + 3 + 'px';
-    opt.style.left = rect.right - opt.offsetWidth - 3 + "px";
+          var opt = document.getElementById("optionnel");
+          var phone = document.getElementById("phone");
+          var rect = phone.getBoundingClientRect();
+          opt.style.display = "block";
+          opt.style.top = rect.top + 3 + 'px';
+          opt.style.left = rect.right - opt.offsetWidth - 3 + "px";
   }
     var input_phone = document.querySelector("#phone");
     var iti = intlTelInput(input_phone, {
