--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 <body>
 <div style="display: block; width: 100%; height: 100%; min-height: 100vh" id="header">
   <div class="grid-x">
-    <div class="cell small-4 large-3 padding30">
+    <div class="cell shrink padding30">
       <a target="_blank"  href="https://icm-institute.org/fr/?utm_campaign=ENQUETE&utm_source=LP&utm_content=SITE">
-        <img src="assets/logoICM.png" alt="Logo ICM" class="float-center transparent" style="max-width: 150px">
+        <img src="assets/logoICM.png" alt="Logo ICM" class="float-center transparent" style="max-width: 150px; min-width: 100px">
       </a>
     </div>
   </div>
   <div class="grid-x">
     <div class="cell small-12 medium-7">
       <div class="grid-x hPaddding50">
-        <div class="cell small-12 medium-11 medium-offset-1 large-10 large-offset-2">
+        <div class="cell small-12 medium-11 medium-offset-1 large-10 large-offset-1">
           <p class="fs44 blueColor lh130 bBold hide-for-small-only title">
             Que pensez-vous de <br class="show-for-large">
             la recherche sur le cerveau&nbsp;?<br class="show-for-large">
@@ -46,7 +46,7 @@
     </div>
     <div class="cell small-12 medium-5">
       <div class="grid-x" id="formHeaderContainer" style="">
-        <div class="cell small-12 large-9 medium-10 large-offset-2 padding30" style="padding-bottom: 0 !important;">
+        <div class="cell small-12 large-9 medium-10 large-offset-1 padding30 largeLeftMargin10" style="padding-bottom: 0 !important;">
           <p class="greyColor fs18 noHMargin smallText">
             Merci de prendre <span class="orangeColor bold">2 minutes </span><br>
             pour répondre à <span class="orangeColor bold">3 questions&nbsp;</span>!
@@ -79,11 +79,11 @@
                     <input type="email" placeholder="E-mail" id="email" onchange="document.getElementById('formErrorMsg').innerText = ''" class="hMargin5">
                   </label>
                 </div>
-                <div class="medium-12 cell">
+                <div class="medium-12 cell" style="position: relative;">
                   <label>
                     <input type="tel" id="phone" placeholder="1 23 45 67 89" class="hMargin5">
-                    <p id="optionnel" class="blueColor fs12" style="display: none; position: absolute; top: 0; right: 0;">Optionnel</p>
                   </label>
+                  <p id="optionnel" class="blueColor fs12" style="display: block; position: absolute; top: 2px; right: 2px;">Optionnel</p>
                 </div>
               </div>
             </form>
@@ -510,23 +510,23 @@
     <div class="socialContainer show-for-medium">
       <div class="grid-x align-right">
         <a href="https://www.facebook.com/icminstitute/" target="_blank">
-        <div class="cell social cliquable" onmouseover="
+          <div class="cell social cliquable" onmouseover="
         Array.prototype.forEach.call(document.getElementsByClassName('fbTxt'), function(e) {e.style.visibility = 'visible'})" onmouseleave="Array.prototype.forEach.call(document.getElementsByClassName('fbTxt'), function(e) {e.style.visibility = 'hidden'})" >
-          <p class="socialText greyColor fs18 fbTxt" style="visibility: hidden; z-index: 1">Facebook</p>
-          <p class="noHMargin text-center" style="z-index: 999">
-            <i class="float-center fab fa-facebook-f noHMargin"></i>
-          </p>
-        </div>
+            <p class="socialText greyColor fs18 fbTxt" style="visibility: hidden; z-index: 1">Facebook</p>
+            <p class="noHMargin text-center" style="z-index: 999">
+              <i class="float-center fab fa-facebook-f noHMargin"></i>
+            </p>
+          </div>
         </a>
       </div>
       <div class="grid-x align-right">
         <a href="https://twitter.com/icm_institute" target="_blank">
-        <div class="cell social cliquable" onmouseover="Array.prototype.forEach.call(document.getElementsByClassName('ttTxt'), function(e) {e.style.visibility = 'visible'})" onmouseleave="Array.prototype.forEach.call(document.getElementsByClassName('ttTxt'), function(e) {e.style.visibility = 'hidden'})">
-          <p  class="socialText greyColor fs18 ttTxt" style="visibility: hidden; z-index: 1; ">Twitter</p>
-          <p class="noHMargin text-center" style="z-index: 999">
-            <i class="float-center fab fa-twitter noHMargin"></i>
-          </p>
-        </div>
+          <div class="cell social cliquable" onmouseover="Array.prototype.forEach.call(document.getElementsByClassName('ttTxt'), function(e) {e.style.visibility = 'visible'})" onmouseleave="Array.prototype.forEach.call(document.getElementsByClassName('ttTxt'), function(e) {e.style.visibility = 'hidden'})">
+            <p  class="socialText greyColor fs18 ttTxt" style="visibility: hidden; z-index: 1; ">Twitter</p>
+            <p class="noHMargin text-center" style="z-index: 999">
+              <i class="float-center fab fa-twitter noHMargin"></i>
+            </p>
+          </div>
         </a>
       </div>
     </div>
@@ -536,13 +536,10 @@
   <div class="grid-x align-bottom">
     <div class="cell small-4 padding30">
       <a target="_blank"  href="https://icm-institute.org/fr/?utm_campaign=ENQUETE&utm_source=LP&utm_content=SITE">
-      <img src="assets/logoICM.png" alt="Logo ICM" class="transparent w150 logo">
+        <img src="assets/logoICM.png" alt="Logo ICM" class="transparent w150 logo">
       </a>
     </div>
-    <div class="cell small-4" id="questionNbContainer">
-      <p class="fs30 textColor text-center"><span class="fs48 orangeColor" id="questionNb"><!--1--></span> / 3</p>
-    </div>
-    <div class="cell small-4">
+    <div class="cell small-4 small-offset-4">
       <a href="https://don.icm-institute.org/b?cid=191&utm_campaign=ENQUETE&utm_source=LP&utm_content=DON" target="_blank">
         <img  class="float-right padding30" src="assets/btnDon.png" alt="Je donne <3" style="position: absolute; top: 0; right: 0;" id="btnDonQuestion">
       </a>
@@ -550,7 +547,11 @@
   </div>
   <div class="grid-x hPaddding50 align-center">
     <div class="cell small-12 large-7 medium-8">
+      <div class="" id="questionNbContainer">
+        <p class="fs30 greyColor text-center"><span class="fs48 orangeColor" id="questionNb"><!--1--></span> / 3</p>
+      </div>
       <p class="fs42 blueColor lh140 text-center bBold title" id="questionText">
+
         <!--  Pensez-vous qu’il sera possible de guérir des pathologies comme la maladie d’Alzheimer par exemple d’ici 10 ans&nbsp;? -->
       </p>
     </div>
@@ -616,7 +617,7 @@
       <div class="grid-x align-bottom">
         <div class="cell small-4 padding30">
           <a href="https://icm-institute.org/fr/?utm_campaign=ENQUETE&utm_source=LP&utm_content=SITE" target="_blank">
-          <img src="assets/logoICM.png" alt="Logo ICM" class="transparent w150 margin20" style="position: absolute; top: 0; left: 0; z-index: 9999">
+            <img src="assets/logoICM.png" alt="Logo ICM" class="transparent w150 margin20" style="position: absolute; top: 0; left: 0; z-index: 9999">
           </a>
         </div>
         <div class="cell small-4 medium-offset-4">
@@ -715,11 +716,11 @@
           <div class="cell small-10 large-4 medium-8">
             <div class="grid-x align-center">
               <div class="cell">
-                  <div class="orangeButton cliquable noHMargin" id="nextQuestion" onclick="changeQuestion(true);showOverflow()">
-                    <p class="text-center">
-                      QUESTION SUIVANTE
-                    </p>
-                  </div>
+                <div class="orangeButton cliquable noHMargin" id="nextQuestion" onclick="changeQuestion(true);showOverflow()">
+                  <p class="text-center">
+                    QUESTION SUIVANTE
+                  </p>
+                </div>
               </div>
             </div>
           </div>
@@ -729,12 +730,12 @@
   </div>
 </div>
 <div id="thanks" class="answersContainer full lightBG" style="display: none;height: 100%; min-height: 100vh">
-  <div class="grid-y" style="height: 100%;">
-    <div class="cell small-2 medium-3">
+  <div class="grid-y" style="">
+    <div class="cell small-2 medium-3 large-4">
       <div class="grid-x align-bottom">
         <div class="cell small-4 padding30">
           <a href="https://icm-institute.org/fr/?utm_campaign=ENQUETE&utm_source=LP&utm_content=SITE" target="_blank">
-          <img src="assets/logoICM.png" alt="Logo ICM" class="transparent w150 margin20" style="position: absolute; top: 0; left: 0;">
+            <img src="assets/logoICM.png" alt="Logo ICM" class="transparent w150 margin20" style="position: absolute; top: 0; left: 0;">
           </a>
         </div>
         <div class="cell small-4 medium-offset-4">
@@ -745,8 +746,8 @@
       </div>
     </div>
     <div class="cell auto">
-      <div class="grid-x align-center-middle" style="height: 100%">
-        <div class="cell small-12  medium-10 large-9">
+      <div class="grid-x align-center" style="height: 100%">
+        <div class="cell small-12  medium-10 large-9 smallPaddingTop50">
           <p class="bBold fs42 blueColor lh140 bBold text-center title">
             Votre perception des maladies du cerveau
             et de la recherche nous est précieuse.
@@ -793,32 +794,33 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.2/js/utils.js"></script>
 <script>
   //window.addEventListener("resize", setOpt);
-      function setOpt() {
-          var opt = document.getElementById("optionnel");
-          var phone = document.getElementById("phone");
-          var rect = phone.getBoundingClientRect();
-          opt.style.display = "block";
-          opt.style.top = rect.top + 3 + 'px';
-          opt.style.left = rect.right - opt.offsetWidth - 3 + "px";
+  /*function setOpt() {
+    var opt = document.getElementById("optionnel");
+    var phone = document.getElementById("phone");
+    var rect = phone.getBoundingClientRect();
+    opt.style.display = "block";
+    opt.style.top = rect.top + 3 + 'px';
+    opt.style.right = rect.right + 3 + "px";
   }
-    var input_phone = document.querySelector("#phone");
-    var iti = intlTelInput(input_phone, {
-            preferredCountries: ['FR', 'BE'],
-        });
-    var screen = "header";
-    var i = 0;
-      $(document).bind('mousewheel', function(e) {
-        i++;
-        if (i === 1) {
-          if (screen === "why")
-            return;
-        //  console.log(parseInt(window.getComputedStyle(document.getElementById(screen), null).getPropertyValue("height")));
-          //console.log(window.innerHeight);
-            //console.log("je passe");
-            //document.getElementById(screen).style.height = "100%";
-          i = 0;
-        }
-      });
+  */
+  var input_phone = document.querySelector("#phone");
+  var iti = intlTelInput(input_phone, {
+    preferredCountries: ['FR', 'BE'],
+  });
+  var screen = "header";
+  var i = 0;
+  $(document).bind('mousewheel', function(e) {
+    i++;
+    if (i === 1) {
+      if (screen === "why")
+        return;
+      //  console.log(parseInt(window.getComputedStyle(document.getElementById(screen), null).getPropertyValue("height")));
+      //console.log(window.innerHeight);
+      //console.log("je passe");
+      //document.getElementById(screen).style.height = "100%";
+      i = 0;
+    }
+  });
 </script>
 </body>
 </html>
